// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development 1`] = `
Object {
  "devServer": Object {
    "compress": true,
    "contentBase": "<PROJECT_ROOT>",
    "disableHostCheck": true,
    "headers": Object {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "0.0.0.0",
    "https": false,
    "port": 8080,
    "publicPath": "http://127.0.0.1:8080/dist/",
  },
  "devtool": "cheap-module-source-map",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "sourceMap": true,
              "url": [Function],
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 8192,
          "outputPath": "assets",
        },
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "deleteAssetsMap": Object {},
        "options": Object {
          "assetNameRegExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "assetProcessors": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "canPrint": undefined,
          "cssProcessor": [Function],
          "cssProcessorOptions": Object {
            "discardComments": Object {
              "removeAll": true,
            },
          },
          "cssProcessorPluginOptions": Object {},
        },
        "phaseAssetProcessors": Object {
          "compilation.optimize-assets": Array [],
          "compilation.optimize-chunk-assets": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "emit": Array [],
        },
        "pluginDescriptor": Object {
          "name": "OptimizeCssAssetsWebpackPlugin",
        },
      },
      TerserPlugin {
        "options": Object {
          "cache": false,
          "cacheKeys": [Function],
          "chunkFilter": [Function],
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": false,
          "terserOptions": Object {
            "output": Object {
              "comments": false,
            },
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "splitChunks": Object {
      "chunks": "initial",
    },
  },
  "output": Object {
    "filename": "[name].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": Object {
        "chunkFilename": "[name].css",
        "experimentalUseImportModule": false,
        "filename": "[name].css",
        "ignoreOrder": false,
      },
      "runtimeOptions": Object {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "isDevServer": undefined,
      "isWebpack4": false,
      "manifest": Object {
        "assets": Object {},
        "chunks": Object {},
      },
      "options": Object {
        "filename": "manifest.json",
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".vue",
      ".jsx",
    ],
  },
  "stats": "errors-warnings",
}
`;

exports[`production 1`] = `
Object {
  "devServer": Object {
    "compress": true,
    "contentBase": "<PROJECT_ROOT>",
    "disableHostCheck": true,
    "headers": Object {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "0.0.0.0",
    "https": false,
    "port": 8080,
    "publicPath": "http://127.0.0.1:8080/dist/",
  },
  "devtool": false,
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "sourceMap": true,
              "url": [Function],
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 8192,
          "outputPath": "assets",
        },
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "deleteAssetsMap": Object {},
        "options": Object {
          "assetNameRegExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "assetProcessors": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "canPrint": undefined,
          "cssProcessor": [Function],
          "cssProcessorOptions": Object {
            "discardComments": Object {
              "removeAll": true,
            },
          },
          "cssProcessorPluginOptions": Object {},
        },
        "phaseAssetProcessors": Object {
          "compilation.optimize-assets": Array [],
          "compilation.optimize-chunk-assets": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            },
          ],
          "emit": Array [],
        },
        "pluginDescriptor": Object {
          "name": "OptimizeCssAssetsWebpackPlugin",
        },
      },
      TerserPlugin {
        "options": Object {
          "cache": false,
          "cacheKeys": [Function],
          "chunkFilter": [Function],
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": false,
          "terserOptions": Object {
            "output": Object {
              "comments": false,
            },
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "splitChunks": Object {
      "chunks": "initial",
    },
  },
  "output": Object {
    "filename": "[name].[contenthash].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": Object {
        "chunkFilename": "[name].[contenthash].css",
        "experimentalUseImportModule": false,
        "filename": "[name].[contenthash].css",
        "ignoreOrder": false,
      },
      "runtimeOptions": Object {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "isDevServer": undefined,
      "isWebpack4": false,
      "manifest": Object {
        "assets": Object {},
        "chunks": Object {},
      },
      "options": Object {
        "filename": "manifest.json",
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".vue",
      ".jsx",
    ],
  },
  "stats": "errors-warnings",
}
`;
